Return the 'active' value for SVGURIReference.href.animVal

Make animVal return the currently used ('active') value instead of always
returning that of 'href'.
This should re-establish the former "invariant" that baseVal === animVal
when '(xlink:)href' is not being animated.

BUG=606200

Review URL: https://codereview.chromium.org/1917843002

Cr-Commit-Position: refs/heads/master@{#389490}

Former-commit-id: 1d488d94b705ce49d710ba9f992f8c31a24c79e0